force-app/main/default/objects/Partnerships_Member__c/Partnerships_Member__c.object-meta.xml
<CustomObject>
    <description>Custom Partnerships Member Object to represent split of farm across different farmers and entities, coming in from AGBOSS.</description>
    <label>Partnerships Member</label>
    <nameField>
        <label>Partnerships Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships Members</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>