force-app/main/default/objects/Partnerships_Member__c/fields/Grower_Card__c.field-meta.xml
<CustomField>
    <fullName>Grower_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Grower Card, coming in from AGBOSS.</description>
    <label>Grower Card</label>
    <referenceTo>Grower_s_Card__c</referenceTo>
    <relationshipLabel>Partnerships Members</relationshipLabel>
    <relationshipName>Partnerships_Members</relationshipName>
    <type>Lookup</type>
</CustomField>