force-app/main/default/objects/Partnerships_Member__c/fields/Parent_Grower_Card__c.field-meta.xml
<CustomField>
    <fullName>Parent_Grower_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Grower Card to indicate the Grower Card of the farm, coming in from AGBOSS.</description>
    <label>Parent Grower Card</label>
    <referenceTo>Grower_s_Card__c</referenceTo>
    <relationshipLabel>Partnerships Members (Parent Grower Card)</relationshipLabel>
    <relationshipName>Partnerships_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>