force-app/main/default/objects/Partnerships_Member__c/fields/Partnership_Member_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Member_External_ID__c</fullName>
    <description>Text field to represent Partnership Member External ID, coming in from AGBOSS.</description>
    <label>Partnership Member External ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>