force-app/main/default/objects/Partnerships_Member__c/fields/Partnership_Split__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Split__c</fullName>
    <description>Percentage field to indicate the percentage split of the farm, coming in from AGBOSS.</description>
    <label>Partnership Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>